# EmployeesDIR-Qt

./: .gitignore  README.md  WinDeploy.py  curVersion.txt  windep.bat
.github/workflows/: release.yml
EmployeesDIR/: CMakeLists.txt  EmployeesDIR_en_US.ts  EmployeesDIR_zh_CN.ts  config.cpp  config.h  dbconnectform.cpp  dbconnectform.h  dbconnectform.ui  employee.cpp  employee.h  employeelist.cpp  employeelist.h  errorform.cpp  errorform.h  errorform.ui  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsform.cpp  settingsform.h  settingsform.ui
